fixed nav bar alignment and collapse button

--- a/styles/index.css
+++ b/styles/index.css
@@ -10,8 +10,6 @@ Reset default browser styles
 
 html,
 body {
-  margin: 0;
-  padding: 0;
   min-height: 100%;
 }
 
